--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
     }
 
     .code {
-        width: 100%;
+        /* width: 100%; */
         max-width: 300px;       
-        background: #444;
+        /* background: #444; */
         border-radius: 10px;
         overflow: hidden;
         box-shadow: 0 4px 12px rgba(0,0,0,0.5);
@@ -65,7 +65,7 @@
     .code2 {
         width: 100%;
         max-width: 300px;       
-        background: #444;
+        /* background: #444; */
         border-radius: 10px;
         overflow: hidden;
         box-shadow: 0 4px 12px rgba(0,0,0,0.5);
@@ -75,7 +75,7 @@
     .code3 {
         width: 100%;
         max-width: 300px;       
-        background: #444;
+        /* background: #444; */
         border-radius: 10px;
         overflow: hidden;
         box-shadow: 0 4px 12px rgba(0,0,0,0.5);
@@ -84,7 +84,7 @@
     .code4 {
         width: 100%;
         max-width: 390px;       
-        background: #444;
+        /* background: #444; */
         border-radius: 10px;
         overflow: hidden;
         box-shadow: 0 4px 12px rgba(0,0,0,0.5);
@@ -100,28 +100,28 @@
         width: 100%;             
         height: 200px;          
         object-fit: contain;      
-        background: #222;        
+        /* background: #222;         */
     }
 
     .code2 img {
         width: 100%;             
         height: 70px;           
         object-fit: contain;     
-        background: #222;       
+        /* background: #222;        */
     }
 
     .code3 img {
         width: 100%;            
         height: 300px;           
         object-fit: contain;   
-        background: #222;    
+        /* background: #222;     */
     }
 
     .code4 img {
         width: 100%;            
         height: 350px;            
         object-fit: contain;      
-        background: #222;       
+        /* background: #222;        */
     }
 
     .thumbnail:hover {
@@ -150,62 +150,62 @@
 
   <!-- Turing Machine -->
   <section>
-    <h2>Simple Rules...</h2>
-    <p>Understood and Used for Directed Computation</p>
+    <h2>Some Systems Based on Simple Rules...</h2>
+    <p>Can be Understood and Leveraged (for Computation)</p>
     <a href="https://turing-machine-sqrt.onrender.com/" target="_blank">
       <div class="code2">
-        <img src="./m-config_begin.png">
+        <img src="./img/m-config_begin.png">
       </div>
       <div class="code">
-        <img src="./m-config.png">
+        <img src="./img/m-config.png">
       </div>
       <div class="code3">
-        <img src="./m-config-code.png">
+        <img src="./img/m-config-code.png">
       </div>
       <div class="thumbnail">
-        <img src="./turing_machine.png">
+        <img src="./img/turing_machine.png">
       </div>
     </a>
   </section>
 
   <!-- Particle Affinity -->
   <section>
-    <h2>Simple Rules...</h2>
-    <p>That Generate "Emergent" Complexity and Structure</p>
+    <h2>Some Systems Based on Simple Rules...</h2>
+    <p>Generate "Emergent" Complexity and Structure</p>
     <a href="https://particle-affinity-rust-wasm-webgpu.onrender.com/" target="_blank">
       <div class="code">
-        <img src="./affinity_matrix_rules.png">
+        <img src="./img/affinity_matrix_rules.png">
       </div>
       <div class="code">
-        <img src="./move_particle_rule.png">
+        <img src="./img/move_particle_rule.png">
       </div>
       <div class="thumbnail">
-        <img src="./particle_affinity.png">
+        <img src="./img/particle_affinity.png">
       </div>
     </a>
   </section>
 
   <!-- Supervised Learning -->
   <section>
-    <h2>(The Consequence of) Simple Rules...</h2>
-    <p>Can *Sometimes* Be Predicted with Neural Nets using Supervised Learning</p>
+    <h2>Some Systems Based on Simple Rules...</h2>
+    <p>Generate Complexity Yet Are Somewhat Predictable</p>
     <a href="https://www.nets-vs-automata.net/" target="_blank">
       <div class="code4">
-        <img src="./ca_rules.png">
+        <img src="./img/ca_rules.png">
       </div>
       <div class="thumbnail">
-        <img src="./nets_vs_automata.png">
+        <img src="./img/nets_vs_automata.png">
       </div>
     </a>
   </section>
 
   <!-- Reinforcement Learning -->
   <section>
-    <h2>Simple Rules...</h2>
-    <p>Hypothesis: Reinforcement Learning Agents Can Learn To Intelligently Interact With Dynamic and Complex Systems Governed by Simple Rules ✨</p>
+    <!-- <h2>Some Systems Based on Simple Rules...</h2> -->
+    <p>Hypothesis: A Reinforcement Learning Agent Can Learn To Intelligently Interact With Some Systems Based on Simple Rules ✨</p>
     <a href="https://www.nets-vs-automata.net/rl.html" target="_blank">
       <div class="thumbnail">
-        <img src="./rl.png" alt="Reinforcement Learning">
+        <img src="./img/rl.png" alt="Reinforcement Learning">
       </div>
     </a>
   </section>
