--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   <!-- Turing Machine -->
   <section>
     <h2>Some Systems Based on Simple Rules...</h2>
-    <p>Can be Understood and Leveraged (for Computation)</p>
+    <p>Can be Understood, Constructed, and Leveraged (for Computation)</p>
     <a href="https://turing-machine-sqrt.onrender.com/" target="_blank">
       <div class="code2">
         <img src="./img/m-config_begin.png">
