--- a/index.html
+++ b/index.html
@@ -30,98 +30,41 @@
       transform: translateY(0);
     }
 
-    h1, h2 {
-      margin-bottom: 1rem;
+    section h1, h2 {
+      /* margin-bottom: 1rem; */
       text-align: center;
     }
 
     p {
       max-width: 700px;
       text-align: center;
-      margin-bottom: 1.5rem;
+      /* margin-bottom: 1.5rem; */
     }
 
     .thumbnail {
-      width: 400px;
-      height: 200px;
-      /* background: #444; */
+      width: 420px;
+      margin: 10px auto;
       border-radius: 10px;
       overflow: hidden;
       box-shadow: 0 4px 12px rgba(0,0,0,0.5);
       transition: transform 0.3s ease;
-      margin-bottom: 5px;
     }
 
     .code {
-        /* width: 100%; */
-        max-width: 300px;       
-        /* background: #444; */
-        border-radius: 10px;
-        overflow: hidden;
-        box-shadow: 0 4px 12px rgba(0,0,0,0.5);
-        transition: transform 0.3s ease;
-    }
-
-    .code2 {
-        width: 100%;
-        max-width: 300px;       
-        /* background: #444; */
-        border-radius: 10px;
-        overflow: hidden;
-        box-shadow: 0 4px 12px rgba(0,0,0,0.5);
-        transition: transform 0.3s ease;
-    }
-
-    .code3 {
-        width: 100%;
-        max-width: 300px;       
-        /* background: #444; */
-        border-radius: 10px;
-        overflow: hidden;
-        box-shadow: 0 4px 12px rgba(0,0,0,0.5);
-        transition: transform 0.3s ease;
-    }
-    .code4 {
-        width: 100%;
-        max-width: 390px;       
-        /* background: #444; */
-        border-radius: 10px;
-        overflow: hidden;
-        box-shadow: 0 4px 12px rgba(0,0,0,0.5);
-        transition: transform 0.3s ease;
-    }
-
-    .code, .code2, .code3, .code4, .thumbnail {
-        margin: 10px auto;     /* centers horizontally */
-        display: block;        /* makes sure auto margins work */
+      width: 390px;
+      margin: 2px auto;
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.5);
+      transition: transform 0.3s ease;
     }
 
     .code img {
-        width: 100%;             
-        height: 200px;          
-        object-fit: contain;      
-        /* background: #222;         */
-    }
-
-    .code2 img {
-        width: 100%;             
-        height: 70px;           
-        object-fit: contain;     
-        /* background: #222;        */
-    }
-
-    .code3 img {
-        width: 100%;            
-        height: 300px;           
-        object-fit: contain;   
-        /* background: #222;     */
-    }
-
-    .code4 img {
-        width: 100%;            
-        height: 350px;            
-        object-fit: contain;      
-        /* background: #222;        */
+      width: 100%;
+      height: auto; /* auto height keeps aspect ratio */
+      display: block; /* removes any inline spacing issues */
+      object-fit: contain; /* ensures full image fits without distortion */
+      max-width: 100%; /* prevents overflow in case of any browser quirks */
     }
 
     .thumbnail:hover {
@@ -139,6 +82,20 @@
       text-decoration: none;
       color: inherit;
     }
+
+    h1 {
+      font-size: 2.5rem;   /* explicitly define font size */
+    }
+
+    h2 {
+      font-size: 1.8rem;   /* also define h2 if you want consistency */
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+      font-weight: bold;
+      text-align: center;
+      margin: 1rem 0;
+    }
   </style>
 </head>
 <body>
@@ -153,13 +110,16 @@
     <h2>Some Systems Based on Simple Rules...</h2>
     <p>Can be Understood, Constructed, and Leveraged (for Computation)</p>
     <a href="https://turing-machine-sqrt.onrender.com/" target="_blank">
-      <div class="code2">
+      <div class="code">
+        <img src="./img/turing-machine-diagram.png">
+      </div>
+      <div class="code">
         <img src="./img/m-config_begin.png">
       </div>
       <div class="code">
         <img src="./img/m-config.png">
       </div>
-      <div class="code3">
+      <div class="code">
         <img src="./img/m-config-code.png">
       </div>
       <div class="thumbnail">
@@ -190,7 +150,7 @@
     <h2>Some Systems Based on Simple Rules...</h2>
     <p>Generate Complexity Yet Are Somewhat Predictable</p>
     <a href="https://www.nets-vs-automata.net/" target="_blank">
-      <div class="code4">
+      <div class="code">
         <img src="./img/ca_rules.png">
       </div>
       <div class="thumbnail">
