--- a/index.html
+++ b/index.html
@@ -204,10 +204,10 @@
         <div class="accordion">
           <span>We Don't Do Normal Zero Padding for ConvNets</span>
           <img src="./img/zero_padding.png">
-          <span>We Want the Conv. Kernels that predominantly learns on interior cells to work on edge cells as well!</span>
-          <span>So our Cellular Automata is on a Torus to Eliminate Edge Cases (literally).</span>
+          <span>We Want the Conv. Kernels that predominantly learn on interior cells to also work on edge cells.</span>
+          <span>So our Cellular Automata is on a Torus to eliminate edge cases, literally.</span>
           <img src="./img/ca_torus.png">
-          <span>But this means we needed to create bespoke Toroidal Padding for TensorFlow.js</span>
+          <span>But this means we need to create bespoke Toroidal Padding for TensorFlow.js</span>
           <img src="./img/toroidal_padding.png">
           <img src="./img/net_diagram.png">
           <img src="./img/net_diagram2.png">
