added a few more descriptions

--- a/index.html
+++ b/index.html
@@ -209,8 +209,11 @@
           <img src="./img/ca_torus.png">
           <span>But this means we need to create bespoke Toroidal Padding for TensorFlow.js</span>
           <img src="./img/toroidal_padding.png">
+          <span>Fully-Connected Network Diagram</span>
           <img src="./img/net_diagram.png">
+          <span>Convolutional Neural Network Diagram</span>
           <img src="./img/net_diagram2.png">
+          <span>Network Construction Details</span>
           <img src="./img/net_architecture.png">
         </div>
       </details>
